--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
 
 [project.optional-dependencies]
 tests = [
+    "optax",
     "parameterized",
     "pytest",
     "pytest-cov",
