--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,16 +40,11 @@ requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.package-data]
-"invrs_gym" = ["py.typed"]
+"totypes" = ["py.typed"]
 
 [tool.pytest.ini_options]
-addopts = [
-    # Allow test files to have the same name in different directories.
-    "--import-mode=importlib",
-]
-pythonpath = [
-  "src",
-]
+addopts = ["--import-mode=importlib"]  # Allow tests with same name in different dirs.
+pythonpath = ["src"]
 
 [tool.black]
 line-length = 88
