--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -7,8 +7,8 @@ tag_name = "{new_version}"
 allow_dirty = true
 parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<dev>dev)\\d+\\+[-_a-zA-Z0-9]+)?"
 serialize = [
-    "{major}.{minor}.{patch}.{dev}{distance_to_latest_tag}+{short_branch_name}",
-    "{major}.{minor}.{patch}"
+    "v{major}.{minor}.{patch}.{dev}{distance_to_latest_tag}+{short_branch_name}",
+    "v{major}.{minor}.{patch}"
 ]
 message = "Version updated from {current_version} to {new_version}"
 
